--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ body {
   <div class="stack">
     <div class="clock" id="clock">00:00:00</div>
 
-    <a class="btn" href="https://你的正规网页地址.com">
+    <a class="btn" href="https://baidu.cn">
       继续访问
     </a>
 
