--- a/index.html
+++ b/index.html
@@ -195,8 +195,9 @@ h1 {
 <!-- ===== 极简手机弹窗 HTML ===== -->
 <div id="popupOverlay" class="popup-overlay">
     <div class="popup-content">
-        <h2>温馨提示</h2>
-        <p>本站整理了丰富的学习资料，记得妥善保存账号信息。</p>
+        <h2>截图保存方便下次观看</h2>
+        <p>进不了本站时请更换浏览器
+        <br>或更换地址地址访问即可<br>111ccc.cc<br>333ccc.cc<br>v6z.xyz</p>
         <button id="popupCloseBtn" class="popup-close-btn">关闭</button>
     </div>
 </div>
