--- a/index.html
+++ b/index.html
@@ -169,18 +169,19 @@ h1 {
     </div>
 </div>
 
-<!-- ✅ 唯一保留的 Tawk.to 客服（不会冲突） -->
-<script>
-var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+<div id='tawk_693ed8f9e13f1e197a0d91cb'></div>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date(); Tawk_API.embedded='tawk_693ed8f9e13f1e197a0d91cb';
 (function(){
-var s1 = document.createElement("script");
-s1.async = true;
-s1.src = 'https://embed.tawk.to/693ed8f9e13f1e197a0d91cb/default';
-s1.charset = 'UTF-8';
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/693ed8f9e13f1e197a0d91cb/1jcf832qc';
+s1.charset='UTF-8';
 s1.setAttribute('crossorigin','*');
-document.body.appendChild(s1);
-})();
+s0.parentNode.insertBefore(s1,s0);})();
 </script>
+<!--End of Tawk.to Script-->
 
 <script>
 /* 手机弹窗：只显示一次 */
