--- a/index.html
+++ b/index.html
@@ -1,197 +1,156 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>学习资料导航</title>
-
+<title>学习资料整理说明</title>
 <style>
-html, body {
-    height: 100%;
-    margin: 0;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "PingFang SC", "Helvetica Neue", Arial;
 }
-
-.background {
-    position: fixed;
-    inset: 0;
-    background-image: url('https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEOrIZpVL_lLWeyMY1J4q0fx9f2lw7RXQAC_iEAAnnVqFaxvnV_4-5AajgE.jpeg');
-    background-size: cover;
-    background-position: center;
-    z-index: -1;
-}
-
 body {
-    font-family: Arial, sans-serif;
-    color: #fff;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  min-height: 100vh;
+  padding: 36px 18px;
+  background: linear-gradient(135deg, #9ee7e1 0%, #f7e65a 100%);
 }
-
-/* ===== 标题 ===== */
+.container {
+  max-width: 420px;
+  margin: 0 auto;
+}
 h1 {
-    margin-top: 12px;
-    margin-bottom: 6px;
-    font-size: 36px;
-    text-shadow: 2px 2px 6px rgba(0,0,0,.6);
+  font-size: 20px;
+  color: #333;
+  margin-bottom: 14px;
+  font-weight: 600;
+}
+p {
+  font-size: 14px;
+  color: #444;
+  line-height: 1.7;
+  margin-bottom: 14px;
+}
+.note {
+  font-size: 13px;
+  color: #666;
+  margin-top: 10px;
+}
+.links {
+  margin-top: 26px;
+  padding-top: 18px;
+  border-top: 1px solid rgba(0,0,0,0.15);
+}
+.link-btn {
+  display: block;
+  text-align: center;
+  margin-bottom: 14px;
+  padding: 14px 0;
+  border-radius: 999px;
+  font-size: 15px;
+  color: #fff;
+  text-decoration: none;
+  background: linear-gradient(135deg, #ffd54f, #ffb300);
 }
 
-.sub-text {
-    margin-top: 0;
-    margin-bottom: 8px;
-    color: #fff3b0;
-    font-size: 18px;
-    font-style: italic;
-    letter-spacing: 1px;
-    line-height: 1.5;
-    text-shadow: 0 1px 3px rgba(0,0,0,.6);
-}
-
-.notice {
-    max-width: 880px;
-    margin: 4px auto 0;
-    font-size: 14px;
-    line-height: 1.6;
-    opacity: .88;
-}
-
-/* ===== 按钮 ===== */
-.button-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    max-width: 900px;
-    width: 100%;
-    margin: 24px auto 20px;
-    justify-content: center;
-}
-
-.button {
-    width: calc(50% - 10px);
-    padding: 15px 20px;
-    border-radius: 12px;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-    text-decoration: none;
-    opacity: .95;
-    box-sizing: border-box;
-}
-
-.button:hover { opacity: 1; }
-
-.button1 { background: linear-gradient(135deg,#3f51ff,#7c4dff); }
-.button2 { background: linear-gradient(135deg,#00c853,#64dd17); }
-.button3 { background: linear-gradient(135deg,#ff9100,#ff6d00); }
-.button4 { background: linear-gradient(135deg,#d500f9,#ff1744); }
-.button5 { background: linear-gradient(135deg,#ffd600,#ffab00); }
-.button6 { background: linear-gradient(135deg,#2b2b2b,#6a6a6a,#2b2b2b); }
-
-/* ===== 联系方式 ===== */
-.qq-group-btn {
-    margin: 20px auto 36px;
-    padding: 10px 24px;
-    background: rgba(18,183,245,0.9);
-    border-radius: 22px;
-    font-size: 14px;
-    text-decoration: none;
-    color: #fff;
-}
-
-/* ===== 手机弹窗 ===== */
+/* 弹窗样式 */
 .popup-overlay {
-    display: none;
-    position: fixed;
-    inset: 0;
-    background: rgba(0,0,0,0.6);
-    z-index: 9999;
-    justify-content: center;
-    align-items: center;
+  position: fixed;
+  top:0; left:0;
+  width:100%; height:100%;
+  background: rgba(0,0,0,0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
 }
-
 .popup-content {
-    background: #fff;
-    color: #333;
-    padding: 15px 20px;
-    border-radius: 12px;
-    width: 90%;
-    max-width: 300px;
-    text-align: center;
+  background: #fff;
+  border-radius: 12px;
+  padding: 20px;
+  max-width: 320px;
+  text-align: center;
+  position: relative;
 }
-
-.popup-close-btn {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    border-radius: 6px;
-    background: #ccc;
-    cursor: pointer;
+.popup-content img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  margin-bottom: 12px;
+}
+.popup-content h2 {
+  font-size: 16px;
+  margin-bottom: 10px;
+  color: #333;
+}
+.popup-close {
+  position: absolute;
+  top: 10px;
+  right: 12px;
+  font-size: 18px;
+  cursor: pointer;
+  color: #666;
 }
 </style>
 </head>
-
 <body>
+<div class="container">
 
-<div class="background"></div>
+  <h1>学习资料整理说明</h1>
 
-<h1>学习资料导航</h1>
+  <p>
+    本页面用于整理和说明部分学习相关资料的获取方式，
+    内容来源于公开网络，仅作为学习参考。
+  </p>
 
-<p class="sub-text">
-包天以上请妥善保存账号信息<br>
-避免学习进度丢失
-</p>
+  <p>
+    页面本身不提供下载或服务功能，以下链接为补充资料说明，
+    可根据个人需要自行选择是否访问。
+  </p>
 
-<div class="notice">
-本站仅提供第三方学习资源的整理与导航
+  <div class="links">
+    <a class="link-btn"
+       href="http://1.Mr79BrK9Yh.silusx.cn/2257/zl?code=Mr79BrK9Yh&x">
+       相关学习资料参考
+    </a>
+
+    <a class="link-btn"
+       href="http://hoZRzgCeJs.analyses.cn/?rcHnf&Ol=ertgrvjfmwordakabn">
+       课程内容补充说明
+    </a>
+  </div>
+
+  <div class="note">
+    提示：部分内容可能因网络或地区原因存在访问差异。
+  </div>
+
 </div>
 
-<div class="button-container">
-<a class="button button1" href="http://6e8e.cc" target="_blank">学习站点2</a>
-<a class="button button2" href="http://47xxus0sn.xagqh.cn/Mr79BrK9Yh" target="_blank">学习站点1</a>
-<a class="button button3" href="http://g62k.ridxrcm.cn/?Oid=c2Rtcmkwbm4" target="_blank">学习站点4</a>
-<a class="button button4" href="http://IjaMWExiyP.e.haijiacp.com/?NXVsb&La=fqhjjqxcicvsqtddnu" target="_blank">学习站点3</a>
-<a class="button button5" href="https://1busin-ebsoo-19cos.cyou" target="_blank">免费学习资料</a>
-<a class="button button6" href="https://cdn.auoktalk.com/1765305207_9a98847a3077bb8d026152b20018639f?code=ufbq75" target="_blank">学习站点5</a>
+<!-- 弹窗 HTML -->
+<div class="popup-overlay" id="popup">
+  <div class="popup-content">
+    <span class="popup-close" id="popupClose">&times;</span>
+    <h2>截图保存方便下次观看学习</h2>
+    <!-- 这里可以换成你的图片 -->
+    <img src="https://via.placeholder.com/300x150?text=浏览器搜本站地址+111.com+222.com+333.com" alt="学习地址提示">
+    <p style="font-size:12px; color:#666; margin-top:6px;">仅供记录学习使用</p>
+  </div>
 </div>
-
-<a class="qq-group-btn" href="http://www.930.mom" target="_blank">
-学习交流群 / 联系方式
-</a>
-
-<!-- 手机提示弹窗 -->
-<div id="popupOverlay" class="popup-overlay">
-    <div class="popup-content">
-        <p>截图保存方便下次访问<br><br>地址一：111ccc.cc<br>地址二：333ccc.cc<br>地址三：v6z.xyz</p>
-        <button class="popup-close-btn" onclick="this.parentElement.parentElement.style.display='none'">关闭</button>
-    </div>
-</div>
-
-<div id='tawk_693ed8f9e13f1e197a0d91cb'></div>
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date(); Tawk_API.embedded='tawk_693ed8f9e13f1e197a0d91cb';
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/693ed8f9e13f1e197a0d91cb/1jcf832qc';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);})();
-</script>
-<!--End of Tawk.to Script-->
 
 <script>
-/* 手机弹窗：只显示一次 */
-if (window.innerWidth <= 768 && !document.cookie.includes('popupShown')) {
-    setTimeout(() => {
-        document.getElementById('popupOverlay').style.display = 'flex';
-        document.cookie = "popupShown=true;path=/;max-age=604800";
-    }, 2000);
-}
-</script>
+// 弹窗只显示一次（本地存储）
+window.addEventListener('load', function() {
+  if(!localStorage.getItem('popupShown')) {
+    document.getElementById('popup').style.display = 'flex';
+    localStorage.setItem('popupShown', 'yes');
+  }
+});
 
+// 点击关闭按钮
+document.getElementById('popupClose').addEventListener('click', function() {
+  document.getElementById('popup').style.display = 'none';
+});
+</script>
 </body>
 </html>
