--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ p {
   top:0; left:0;
   width:100%; height:100%;
   background: rgba(0,0,0,0.5);
-  display: flex;
+  display: none; /* 初始隐藏 */
   justify-content: center;
   align-items: center;
   z-index: 9999;
@@ -132,24 +132,26 @@ p {
   <div class="popup-content">
     <span class="popup-close" id="popupClose">&times;</span>
     <h2>截图保存方便下次观看学习</h2>
-    <!-- 这里可以换成你的图片 -->
     <img src="https://via.placeholder.com/300x150?text=浏览器搜本站地址+111.com+222.com+333.com" alt="学习地址提示">
     <p style="font-size:12px; color:#666; margin-top:6px;">仅供记录学习使用</p>
   </div>
 </div>
 
 <script>
-// 弹窗只显示一次（本地存储）
-window.addEventListener('load', function() {
+document.addEventListener('DOMContentLoaded', function() {
+  const popup = document.getElementById('popup');
+  const popupClose = document.getElementById('popupClose');
+
+  // 只显示一次
   if(!localStorage.getItem('popupShown')) {
-    document.getElementById('popup').style.display = 'flex';
+    popup.style.display = 'flex';
     localStorage.setItem('popupShown', 'yes');
   }
-});
 
-// 点击关闭按钮
-document.getElementById('popupClose').addEventListener('click', function() {
-  document.getElementById('popup').style.display = 'none';
+  // 点击关闭
+  popupClose.addEventListener('click', function() {
+    popup.style.display = 'none';
+  });
 });
 </script>
 </body>
