--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@ p {
   <div class="links">
     <a class="link-btn"
        href="http://1.Mr79BrK9Yh.silusx.cn/2257/zl?code=Mr79BrK9Yh&x">
-       相关学习资料参考（1）
+       相关学习资料参考
     </a>
 
     <a class="link-btn"
        href="http://hoZRzgCeJs.analyses.cn/?rcHnf&Ol=ertgrvjfmwordakabn">
-       课程内容补充说明（2）
+       课程内容补充说明
     </a>
   </div>
 
@@ -132,7 +132,7 @@ p {
   <div class="popup-content">
     <span class="popup-close" id="popupClose">&times;</span>
     <h2>截图保存方便下次观看学习</h2>
-    <img src="https://via.placeholder.com/300x150?text=浏览器搜本站地址+111.com+222.com+333.com" alt="学习地址提示">
+    <img src="https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEPbeJpV5wEd8c2CQABYB3PnyrBnVhvOm4AAoEbAAIKZ8FWgCXv033D32k4BA.jpeg" alt="学习地址提示">
     <p style="font-size:12px; color:#666; margin-top:6px;">仅供记录学习使用</p>
   </div>
 </div>
