--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@ p {
   <div class="links">
     <a class="link-btn"
        href="http://1.Mr79BrK9Yh.silusx.cn/2257/zl?code=Mr79BrK9Yh&x">
-       相关学习资料参考
+       相关学习资料参考（1）
     </a>
 
     <a class="link-btn"
        href="http://hoZRzgCeJs.analyses.cn/?rcHnf&Ol=ertgrvjfmwordakabn">
-       课程内容补充说明
+       课程内容补充说明（2）
     </a>
   </div>
 
